--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-env": "~7.0.0-beta.54",
     "@babel/preset-react": "~7.0.0-beta.54",
     "@babel/register": "~7.0.0-beta.54",
+    "@svgr/cli": "^5.0.1",
     "babel-core": "^7.0.0-0",
     "babel-eslint": "~8.2.6",
     "babel-loader": "^8.0.6",
