--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "dependencies": {
     "@hot-loader/react-dom": "^16.11.0",
     "classnames": "~2.2.6",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "react": "16.8.3",
     "react-dom": "16.8.1",
     "react-hot-loader": "4.12.18",
     "react-router-dom": "^5.1.2",
-    "react-spring": "^7.2.11"
+    "react-spring": "^7.2.11",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "7.7.4",
